<resources>
    <string name="app_name">Lesson 05</string>
    <string name="tv_actions">actions</string>
    <string name="tv_result">result</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="point">.</string>
    <string name="clear">C</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>

    <string name="tv_theme_selection">Select a theme for the application:</string>
    <string name="radio_button_light_theme">Light theme</string>
    <string name="radio_button_dark_theme">Dark theme</string>
    <string name="button_return">Return</string>
</resources>